# goit-pythonweb-hw-10

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  sample_contacts.py
migrations/: env.py
migrations/versions/: 20250610_2126-4ec3399ca615_initial_migration.py  20250620_add_users_table.py
src/: schemas.py
src/api/: auth.py  contacts.py  dependencies.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/services/: auth.py  cloudinary.py  contacts.py  email.py  users.py
src/services/templates/: email_template.html
